assets/styles/components/_grid.scss
// Grid system
.main {
  @include make-col-ready();
  @include media-breakpoint-up(sm) {
    @include make-col($main-sm-columns);
    .sidebar-primary & {
      @include make-col($main-sm-columns - $sidebar-sm-columns);
    }
  }
}
.sidebar {
  @include make-col-ready();
  @include media-breakpoint-up(sm) {
    @include make-col($sidebar-sm-columns);
  }
}

// Additional grid 
.triptych-row {
  @include make-row;
}

.triptych {
  @include make-col-ready();
  @include media-breakpoint-up(lg) {
    @include make-col(4);
  }
}

@mixin triptych-panel {
  margin-top: map-get($triptych, margin-top);
  @include make-row;
  @include make-col-ready(0);
  @include media-breakpoint-up(xs) {
    @include make-col(12);
  }
  @include media-breakpoint-down(md) {
    margin-left: 0px;
  }
  max-width: map-get($triptych, width);
  height: map-get($triptych, height);
}
  
.triptych-panel-left {
  @include triptych-panel;
  float: left;
  margin-left: 0px;
}

.triptych-panel-middle {
  @include triptych-panel;
  @include media-breakpoint-up(lg) {
    float: none;
    margin: map-get($triptych, margin-top) auto 0px auto;
  }
}

.triptych-panel-right {
  @include triptych-panel;
  @include media-breakpoint-up(lg) {
    float: right;
    margin-right: 0px;
  }
}

@mixin triptych-panel-content($font-size) {
  @include make-row(0);
  @include make-col-ready();
  @include make-col(12);
  font-size: $font-size;
  background-color: white;
  border-radius: 5px;
}

.triptych-panel-title {
  @include triptych-panel-content($section-title);
  font-family: Montserrat;
  font-weight: bold;
  line-height: map-get($triptych, height-title);
  height: map-get($triptych, height-title);
  margin-bottom: map-get($triptych, title-body-gap);
}

.triptych-panel-body {
  @include triptych-panel-content($paragraph);
  padding-top: 15px;
  font-family: Raleway;
  line-height: 1.2rem;
  height: map-get($triptych, height) - map-get($triptych, height-title) - map-get($triptych, title-body-gap);
}

